# foia-rti-automation

./: LEGAL.md  README.md  dispatch_config_template.json  pyproject.toml
.github/workflows/: ci.yml
foia_rti/: __init__.py  cli.py
foia_rti/analysis/: __init__.py  redaction_detector.py  response_parser.py
foia_rti/dispatch/: __init__.py  config.py  runner.py
foia_rti/filers/: __init__.py  batch_filer.py  email_filer.py  muckrock_integration.py
foia_rti/generators/: __init__.py  eu_requests.py  generator_base.py  india_rti.py  uk_foi.py  us_federal.py  us_state.py
foia_rti/tracker/: __init__.py  alerts.py  appeals.py  deadlines.py  tracker.py
templates/: india_rti_templates.json  us_federal_templates.json
tests/: test_generators.py
